--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,7 +20,7 @@
         "-c",
         "TASM.EXE *.asm /m2", // Assemble all .asm files into .obj files
         "-c",
-        "LINK.EXE main.obj blocks.obj ball.obj paddle.obj;", // Link all .obj files to create an executable
+        "LINK.EXE main.obj win.obj winmes.obj blocks.obj ball.obj paddle.obj;", // Link all .obj files to create an executable
         "-c",
         "copy *.obj output.bin", // Combine all .obj files into a single .bin file
         "-c",
@@ -61,7 +61,7 @@
         "-c",
         "TASM.EXE *.asm /m2", // Assemble all .asm files into .obj files
         "-c",
-        "LINK.EXE main.obj blocks.obj ball.obj paddle.obj;" // Link all .obj files to create an executable
+        "LINK.EXE main.obj win.obj winmes.obj blocks.obj ball.obj paddle.obj;" // Link all .obj files to create an executable
       ],
       "group": {
         "kind": "test",
