--- a/p2/p2.conf
+++ b/p2/p2.conf
@@ -241,7 +241,7 @@ keyboardlayout=auto
 [ipx]
 # ipx: Enable ipx over UDP/IP emulation.
 
-ipx=false
+ipx=true
 
 [autoexec]
 # Lines in this section will be run at startup.
