--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,7 +27,7 @@
         "-c",
         "TASM.EXE ..\\*.asm /m2",
         "-c",
-        "LINK.EXE main win winmes blocks ball paddle losemes hearts move poll send username estbconn,p1.exe;",
+        "LINK.EXE main win winmes blocks ball paddle losemes hearts move poll send username estbconn score ,p1.exe;",
         "-c",
         "copy *.obj output.bin",
         "-c",
@@ -73,7 +73,7 @@
         "-c",
         "TASM.EXE ..\\*.asm /m2",
         "-c",
-        "LINK.EXE main win winmes blocks ball paddle losemes hearts move poll send username estbconn,p2.exe;",
+        "LINK.EXE main win winmes blocks ball paddle losemes hearts move poll send username estbconn score,p2.exe;",
         "-c",
         "copy *.obj output.bin",
         "-c",
