fix score && diff colours for paddles

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -27,7 +27,7 @@
         "-c",
         "TASM.EXE ..\\*.asm /m2",
         "-c",
-        "LINK.EXE main win winmes blocks ball paddle losemes hearts move poll send username estbconn score ,p1.exe;",
+        "LINK.EXE main win winmes blocks ball paddle losemes hearts move poll send username estbconn score,p1.exe;",
         "-c",
         "copy *.obj output.bin",
         "-c",
@@ -36,6 +36,10 @@
         "DEL *.obj",
         // "-c",
         // "DEL output.bin",
+        "-c",
+        "p1",
+        "-c",
+        "exit"
         // "-c",
         // "p1",
         // "-c",
@@ -82,6 +86,10 @@
         "DEL *.obj",
         // "-c",
         // "DEL output.bin",
+        "-c",
+        "C:\\p2\\p2.exe",
+        "-c",
+        "exit"
         // "-c",
         // "p2.exe",
         // "-c",
